# travel-mapper

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  app.py  auth.py  config.py  create_db.py  docker-compose.yml  errors.py  main.py  pyproject.toml  requirements.txt  server.py  todo.md  tripit.py  tsconfig.json
.sqlx/: query-019d457c6daba5bc0641e67efae0e7ea445f706fd776c4deb2949121dead434b.json  query-047f543ead336bfc106c5d84130d9a803e719a0e187b246d9037990714107a35.json  query-04d93c36082efdbee4f2cd801768c43407fdafc328573c0a4c9eba7b71473008.json  query-0aa8bde3ab7e786598ca9d7248e309c9398a91012bb49c2398a46cf21f05daa5.json  query-0b932f7e29fe4c620e49cf440638d6f2c378e5c88baa2d2cac15f7fe3291cc65.json  query-0e764435ca4665440c0fa912d52ab344eb3bc918992b97a01ba5da6648ec48b6.json  query-0ef4154a0dab54588a1bfaeffb6ab3127e7960601aad2bb3787a3337cf939728.json  query-10fceea109ed9b98479ffc5646fe39e9f14fc39a456d6318ac7d907efe7835b5.json  query-138e465ea5624611678a088bbcde1d29931007c085fdf5ed1638f74979402655.json  query-148af11cea421ea300ce8ececedaf1b85da13f7e17f7e8f2de262c292b2ce49c.json  query-16434247ddf65ad1fa9a536b9a1e45b0beb1336bf325c0d7a4851e945b6a1920.json  query-1880f0925676f8a5b565bf056c98aab90fb52ac0885d6a58113899cc4f6d6149.json  query-1995c0ff00e0b986febb3adfd7a44aff5764fa74b313f673ef92b85846da042d.json  query-1aae63603e6b59da1a468ab48901dc1c84534f6bc8495ebb6791804fbec20c2a.json  query-1af2e51ed0d94dc0d4faeef30c1d98c5ff62d492414e96be32f254f735ed12e8.json  query-1d86cf67e5248548781b757b91c72e642580797310c77a0896db7b004fa8b4f9.json  query-1e1741fc19a75dc2b5955ad51a8b3076d12c1e709478a92119f14fcee857085e.json  query-1e450ccac19ba4871e91f1f1963369ae29cc718dea6a7383bfb40ca94da726d0.json  query-2175df9002b02a185ccf1b1c000d57f794c51bab0ee90b5538c844d7d530d9ea.json  query-22320dc7a549d74d29220ea9d0eab415aea7c37073be0c0d17ba424a9ab8d2fd.json  query-237eb09e56a07ccb0919767dfa7dc91880ffa1173444824d824473d4f9ae186c.json  query-256303fce6d1948f87f75cbb0cbec075a655bf5ca1860cb9e3618566fb8553b9.json  query-2be4a5b4884a7b6e299e626e2d1c2dc234504f2e23d5fcae23e7f781f1bbc763.json  query-2ea7fb35272b59a772b01169486961c26e41cf47bcf2b904cfedd4c798f98cf7.json  query-3124ff044281c11a8905500c989147bdd2b18e4966da2f25cb3c6c17fdb8ac33.json  query-31f9b6cfdbb70c96a430d42092c0c1424f67d0ba403de281a1b5934d36cb31d9.json  query-322c68f627d3d1a909b2cd10585dfe621bfb4bf524e949bdc6c41afb1e920b23.json  query-3370b2722e15e3a74883dcf472801b4e7b56a52fb7a667f2b391df52239f0647.json  query-35660304371f6e79e94cca70e7ed4dc1b6307c499204f8a650176d470e0ef8a9.json  query-3724519309621c17b15849241b94063efdc5c8faaba16d860d5d0c348c7120df.json  query-387a99a90d9fdd0ab3b69f4f72552b2f29ff87b6ddaa1330486be88b20bdbb7b.json  query-38e13271f64014ce14e4763c11323eda842fa63589a17b44a76d6c0abc519e9b.json  query-3966ae00eb2b788d5cfcf4db44dca8f000bc763f36fcf76c21a13643fc4f95b5.json  query-3f285a89522521052e0c84ef6b3759b247fd55ca9f4376e37730d51b397e3918.json  query-4214e11f0f4e6530ae92b371628e339f2bbbac9eed358bad8a61f50e5207bb6a.json  query-453b5a30af8cd8afc4e99e07e8c2d2d246c46c0ce934b836d750c132ca16f819.json  query-4b9d4a95c84d45f4cde5da74326bb2bdfb89a2d81f0d6564601ca1b6128e17f1.json  query-4c4fdbfe886a07cc1bb37bf98dce7f7f9067545034708e0b5b459dc46faa5c74.json  query-5150925c1b442638b4847375c17822b9fc8142cdfbd154527c841f49e01b832d.json  query-52dd472173409c8fce3c4b1f7c04703a8bbab502a60e59f9523e371b9a2a7b39.json  (+123 more)
clients/: __init__.py  tripit.py
database/: __init__.py  __main__.py  manager.py  security.py
docs/: deployment.md  setup-and-configuration.md
middlewares/: __init__.py  auth.py
migrations/: 001_initial.sql  002_details_dedup_and_country.sql  003_rename_cruise_to_boat.sql  004_search_indexes.sql  005_trips.sql  006_status_enrichments.sql  007_feed_tokens.sql  (+11 more)
(+288 files in other folders)
