[tool.poetry]
name = "travel-mapper"
version = "0.1.0"
description = "tripit data mapper"
authors = ["Cian Butler <butlerx@notthe.cloud>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
robyn = "^0.65.0"
orjson = "3.9.15,<4"
opentelemetry-api = "^1.29"
opentelemetry-sdk = "^1.29"
aiohttp = "^3.11.11"
authlib = "^1.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pyright = "^1.1.391"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
